--- a/frontend/src/pages/CategoryProduct.css
+++ b/frontend/src/pages/CategoryProduct.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #f5f5dc; 
+  background-color: #1b1b1a; 
   font-family: 'Arial', sans-serif;
   margin: 0;
   padding: 0;
