--- a/frontend/src/Components/Header.css
+++ b/frontend/src/Components/Header.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     min-width: 0;
-    background-color: #fffafa;
+    background-color: #ffffff;
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
